--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ img {
 @media screen and (max-width: 768px) {
   .row {
     font-size: 3em;
+    width: 100%;
   }
   h1 {
     color: lightcoral;
