--- a/style.css
+++ b/style.css
@@ -95,6 +95,10 @@ img {
   .row {
     width: 100%;
   }
+  #lezioni img, #steps img {
+    width: 100%;
+    object-fit: contain;
+  }
   #lezioni .row>.left {
     float: none;
     display: inline-block;
